Updated for new domain

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 			No server, terminal, or file transfer client required.</p>
 
 		<p><strong>"Installation"</strong></p>
-		<p> 1. Drag <a class="bookmark" href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='http://portkeyapp.herokuapp.com/portkey.js';})();">PortKey</a> into your bookmarks bar.<br/>
+		<p> 1. Drag <a class="bookmark" href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='http://portkey.me/portkey.js';})();">PortKey</a> into your bookmarks bar.<br/>
 			2. There is no second step.</p>
 
 		<p><strong>How to use it.</strong></p>
