--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
 			Portkey won't host images, and removes javascript.<br/>
 			Externally hosted images will work just fine.</p>
 
-		<p> <em>Who's being Portkey?</em><br/>
+		<p> <em>Who's behind Portkey?</em><br/>
 			Ryhan Hassan. Find him 
 			<a href="http://twitter.com/ryhanhassan">on Twitter</a>, or 
 			<a href="mailto: ryhanh@me.com">email him</a>.</p>
