--- a/html/index.html
+++ b/html/index.html
@@ -45,23 +45,7 @@
 			<a href="http://twitter.com/ryhanhassan">on Twitter</a>, or 
 			<a href="mailto: ryhanh@me.com">email him</a>.</p>
 
-
-		<!--
-		<div class='uploadMethod'>port key</div>
-		Boom. Published.
-	-->
-	
 	</header>
-	
-	<!--
-	<a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='http://localhost:5000/portkey.js';})();">Portkeyify</a>
--->
-<!--
-<script type="text/javascript">
-$(document).ready(function(){
-	now.recieveContent = function(content){};
-});
-</script>
--->
+	<div id="alert"><strong>PortKey</strong> is still buggy, and might have secuirty issues. Proceed with caution.</div>
 </body>
 </html>
