--- a/html/index.html
+++ b/html/index.html
@@ -30,8 +30,7 @@
 			No. Portkey is for temporary, static HTML & CSS.</p>
 
 		<p> <em>Will Portkey work with my local HTML & CSS files?</em><br/>
-			Yes. That includes anything served by localhost.<br/>
-			If your browser can render it, Portkey can serve it.</p>
+			Yes. That includes almost anything served by localhost.</p>
 
 		<p> <em>What about style changes made in the inspector?</em><br/>
 			Portkey will sync those changes as well.</p>
@@ -39,6 +38,9 @@
 		<p> <em>What about javascript and images?</em><br/>
 			Portkey won't host images, and removes javascript.<br/>
 			Externally hosted images will work just fine.</p>
+
+		<p> <em>Why won't Portkey work on sites with https?</em><br/>
+			Because of security kittens.</p>
 
 		<p> <em>Who's behind Portkey?</em><br/>
 			Ryhan Hassan. Find him 
