--- a/html/index.html
+++ b/html/index.html
@@ -47,5 +47,18 @@
 			<a href="http://twitter.com/ryhanhassan">on Twitter</a>, or 
 			<a href="mailto: ryhanh@me.com">email him</a>.</p>
 	</header>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-29614316-3']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
