--- a/html/template.html
+++ b/html/template.html
@@ -4,7 +4,7 @@
   <title>Portkey</title>
   <link rel="stylesheet" type="text/css" href="main.css">
   <script type="text/javascript" src="jquery.js"></script>
-  <script src="/nowjs/now.js"></script>
+ <!-- <script src="/nowjs/now.js"></script>-->
 </head>
 <body>
 <script type="text/javascript">
@@ -20,6 +20,7 @@
   })();
 
 </script>
+<!--
 <script type="text/javascript">
 $(document).ready(function(){
 	now.recieveContent = function(content){
@@ -39,5 +40,6 @@ now.recieveProject = function(project){
 */
 });
 </script>
+-->
 </body>
 </html>
